--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>This is a test page!</h1>
-    <input type="submit" name="submit_button" formmethod ="post" value="Do Something">
+    <h1><a href="submit">Head over to the query page!</a></h1>
+    
 
 </body>
 
