--- a/templates/submit.html
+++ b/templates/submit.html
@@ -1,7 +1,7 @@
 {% block title %}Submit Page{% endblock %}
 
 {% block content %}
-<form action="#" method="post">
+<form action="{{ url_for('new_query') }}" method="POST">
     <p>Enter a search term</p>
     <p><input type ="text" name="search" /></p>
     <p><input type="submit" value="submit" /></p>
